force-app/main/default/objects/Payment_Rule__c/Payment_Rule__c.object-meta.xml
<CustomObject>
    <label>Payment Rule</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Payment Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>