force-app/main/default/objects/Payment_Rule__c/fields/Create_Remainder_Payment__c.field-meta.xml
<CustomField>
    <fullName>Create_Remainder_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Remainder Payment</label>
    <type>Checkbox</type>
</CustomField>