force-app/main/default/objects/Payment_Rule__c/fields/Deposit_percentage__c.field-meta.xml
<CustomField>
    <fullName>Deposit_percentage__c</fullName>
    <label>Deposit (percentage)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>