force-app/main/default/objects/Payment_Rule__c/fields/Reservation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Status__c</fullName>
    <label>Reservation Status</label>
    <referenceTo>B25__Reservation_Status__c</referenceTo>
    <relationshipLabel>Payment Rules</relationshipLabel>
    <relationshipName>Payment_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>