force-app/main/default/objects/Payment_Rule__c/validationRules/No_percentage_when_remainder_is_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>No_percentage_when_remainder_is_checked</fullName>
    <active>true</active>
    <errorConditionFormula>Create_Remainder_Payment__c &amp;&amp; NOT(ISBLANK( Deposit_percentage__c ))</errorConditionFormula>
    <errorMessage>You can not enter a percentage when the rule is used to create the remainder of the reservation</errorMessage>
</ValidationRule>